--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-   "target": "es2018",
-   "lib": ["es5", "es6", "ES2018"],
+   "target": "es2020",
+   "lib": ["es2020"],
    "experimentalDecorators": true,
    "emitDecoratorMetadata": true,
    "module": "commonjs",
@@ -13,7 +13,8 @@
    "forceConsistentCasingInFileNames": true,
    "strict": true,
    "noImplicitAny": true,
-   "strictPropertyInitialization": false
+   "strictPropertyInitialization": false,
+   "skipLibCheck": true
   },
   "include": ["src/**/*", "firebase.ts"],
   "exclude": ["node_modules", "dist"],
